Fix center div not responsive
The center div of the page was not responsive, so on mobile it does not follow the text making it unreadable

--- a/docs/assets/layout.css
+++ b/docs/assets/layout.css
@@ -29,7 +29,7 @@ html, body {
     padding: 15px 25px;
     width: 100%;
     max-width: 75%;
-    height: 80%;
+    min-height: 80%;
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
